# habitat-sim

./: .gitignore  buildAndInstall.sh  copyHabitatAcousticsPkg.sh  setup.py
examples/tutorials/: audio_agent.py  audio_materials.py
habitat_sim/: __init__.py  sensor.py  simulator.py
habitat_sim/bindings/: __init__.py
habitat_sim/utils/data/: data_extractor.py
src/: CMakeLists.txt
src/cmake/: dependencies.cmake
src/esp/assets/: CMakeLists.txt  GenericInstanceMeshData.cpp  GenericInstanceMeshData.h  ResourceManager.cpp  ResourceManager.h
src/esp/bindings/: SensorBindings.cpp
src/esp/bindings_js/: bindings_js.cpp
src/esp/scene/: SceneNode.h
src/esp/sensor/: AudioSensor.cpp  AudioSensor.h  CMakeLists.txt  Sensor.h  SensorFactory.cpp
src/esp/sim/: Simulator.cpp  Simulator.h
src/tests/: CMakeLists.txt  SensorTest.cpp
src/utils/viewer/: CMakeLists.txt  viewer.cpp
tests/: test_sensors.py
